[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/GameStartUI.gd" type="Script" id=1]
[ext_resource path="res://Audio/SoundEffects/GlobalSoundEffectGenerator.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/SettingsUI.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Born2bSportyV2.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="Animation" id=3]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverUI:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverUI/Message/Title:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameOverUI/Message/Title:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 11, 8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GameOverUI/Message/Title:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GameOverUI:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GameOverUI:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SettingsUI:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 167, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SettingsUI:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Background:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "SETTINGS"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverUI:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 167, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverUI:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SettingsUI:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 167, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SettingsUI:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "START"
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverUI/Message/Title:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.7, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 0.5, 0.5 ), Vector2( 0.65, 0.65 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverUI/Message/Title:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -7, 0 ), Vector2( -10, 0 ), Vector2( -9, 4.76837e-07 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameOverUI:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GameOverUI/Message/Title:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "title_smack_sound"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "retry_game"
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverUI:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverUI/Message/Title:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameOverUI/Message/Title:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 11, 8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GameOverUI/Message/Title:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GameOverUI:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GameOverUI:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SettingsUI:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 167, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SettingsUI:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Background:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "start_game"
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverUI:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="GameStartUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_left = -7.0
margin_right = 167.0
margin_bottom = 96.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.392157 )

[node name="GameOverUI" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )

[node name="Message" type="Node2D" parent="GameOverUI"]

[node name="Title" type="RichTextLabel" parent="GameOverUI/Message"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 11.0
margin_top = 8.0
margin_right = 187.0
margin_bottom = 41.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 82.6667, 16.3333 )
mouse_filter = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Moggy Monkey"
scroll_active = false

[node name="Play" type="RichTextLabel" parent="GameOverUI/Message"]
margin_left = 104.0
margin_top = 35.0
margin_right = 173.0
margin_bottom = 69.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_fonts/normal_font = SubResource( 2 )
text = "PLAY"

[node name="Settings" type="RichTextLabel" parent="GameOverUI/Message"]
margin_left = 104.0
margin_top = 54.0
margin_right = 230.0
margin_bottom = 94.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_fonts/normal_font = SubResource( 2 )
text = "SETTINGS"

[node name="Credits" type="RichTextLabel" parent="GameOverUI/Message"]
margin_left = 104.0
margin_top = 72.0
margin_right = 230.0
margin_bottom = 112.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_fonts/normal_font = SubResource( 2 )
text = "CREDITS"

[node name="Buttons" type="Node2D" parent="GameOverUI"]
z_index = -1

[node name="TouchScreenButton" type="TouchScreenButton" parent="GameOverUI/Buttons"]
position = Vector2( 103, 35 )
scale = Vector2( 1.75, 0.75 )
shape = SubResource( 5 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="GameOverUI/Buttons"]
position = Vector2( 103, 54 )
scale = Vector2( 2.8, 0.75 )
shape = SubResource( 5 )

[node name="TouchScreenButton3" type="TouchScreenButton" parent="GameOverUI/Buttons"]
position = Vector2( 103, 73 )
scale = Vector2( 2.5, 0.75 )
shape = SubResource( 5 )

[node name="SettingsUI" parent="." instance=ExtResource( 3 )]
position = Vector2( 167, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/SETTINGS = SubResource( 7 )
anims/START = SubResource( 4 )
anims/retry_game = SubResource( 8 )
anims/start_game = SubResource( 6 )

[node name="GlobalSoundEffectGenerator" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="GameOverUI/Buttons/TouchScreenButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="GameOverUI/Buttons/TouchScreenButton2" to="." method="_on_Button2_pressed"]
